--- a/lector.html
+++ b/lector.html
@@ -60,7 +60,7 @@
       <h1>Lector de AXXÓN Web</h1>
       <a href="javascript:history.back()">⬅️ Volver</a>
       <a id="download-button" href=""><div>⬇️ Descargar EPUB</div></a>
-      <a href="../">🏠 Ver otros números</a>
+      <a href="/axxon">🏠 Ver otros números</a>
     </header>
     <div class="container">
       <iframe
